second commit by shrikant

--- a/NodeApplication/Views/Nodes/Index.cshtml
+++ b/NodeApplication/Views/Nodes/Index.cshtml
@@ -15,6 +15,11 @@
 <br/>
 
 <p>
+    <a asp-action="Index1">Tree List</a>
+</p>
+<br />
+
+<p>
     <a asp-action="Create">Create New</a>
 </p>
 <table class="table">
